refactor: replace null checks and RuntimeException with custom exceptions in services