@@ -2,14 +2,13 @@ package dev.LimaDevCod3r.PitStopAPI.service;
 
 import dev.LimaDevCod3r.PitStopAPI.dto.CustomerDTO;
 import dev.LimaDevCod3r.PitStopAPI.dto.CustomerResponseDTO;
+import dev.LimaDevCod3r.PitStopAPI.exception.ResourceNotFoundException;
 import dev.LimaDevCod3r.PitStopAPI.mapper.CustomerMapper;
 import dev.LimaDevCod3r.PitStopAPI.model.CustomerModel;
 import dev.LimaDevCod3r.PitStopAPI.repository.CustomerRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerService {
@@ -23,40 +22,37 @@ public class CustomerService {
     }
 
     public List<CustomerResponseDTO> getAll() {
-        List<CustomerModel> customers = customerRepository.findAll();
-        return customers.stream()
+        return customerRepository.findAll().stream()
                 .map(customerMapper::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CustomerResponseDTO getById(Long id) {
-        Optional<CustomerModel> customerById = customerRepository.findById(id);
-        return customerById.map(customerMapper::mapToResponse).orElse(null);
+        CustomerModel customer = customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer", id));
+        return customerMapper.mapToResponse(customer);
     }
 
     public CustomerDTO create(CustomerDTO customerDTO) {
-        CustomerModel customerModelToPersist = customerMapper.mapToModel(customerDTO);
-        CustomerModel persistedCustomerModel = customerRepository.save(customerModelToPersist);
-        return customerMapper.mapToDTO(persistedCustomerModel);
+        CustomerModel model = customerMapper.mapToModel(customerDTO);
+        CustomerModel persisted = customerRepository.save(model);
+        return customerMapper.mapToDTO(persisted);
     }
 
-
     public CustomerResponseDTO update(Long id, CustomerDTO customerDTO) {
-        Optional<CustomerModel> customerById = customerRepository.findById(id);
-        if (customerById.isEmpty()) {
-            return null;
-        }
-        CustomerModel customerModelToUpdate = customerById.get();
-        customerModelToUpdate.setName(customerDTO.getName());
-        customerModelToUpdate.setEmail(customerDTO.getEmail());
-        customerModelToUpdate.setPhone(customerDTO.getPhone());
-        customerModelToUpdate.setCpf(customerDTO.getCpf());
-        customerRepository.save(customerModelToUpdate);
-
-        return customerMapper.mapToResponse(customerModelToUpdate);
+        CustomerModel customer = customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer", id));
+        customer.setName(customerDTO.getName());
+        customer.setEmail(customerDTO.getEmail());
+        customer.setPhone(customerDTO.getPhone());
+        customer.setCpf(customerDTO.getCpf());
+        customerRepository.save(customer);
+        return customerMapper.mapToResponse(customer);
     }
 
     public void deleteById(Long id) {
+        customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer", id));
         customerRepository.deleteById(id);
     }
 }
